# belayme

./: .gitignore  Dockerfile  README.md  entrypoint.sh  fly.toml  manage.py  pyproject.toml
belayme/: asgi.py  settings.py  urls.py  wsgi.py
belayme/common/: managers.py
common/: admin.py  models.py
common/migrations/: 0001_initial.py
core/: adapter.py  admin.py  forms.py  messenger.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_messengerbelayer_photo.py
core/templates/: belayers.html  contacts.html  home.html  login.html  message.html  sent_message.html
messenger/: models.py
templates/allauth/account/: login.html
theme/templates/: base.html  navigation.html
