[tool.poetry]
name = "belayme"
version = "0.1.0"
description = ""
authors = ["Daniel RB <daniel@danielrb.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
django-tailwind = "^3.1.1"
django-widget-tweaks = "^1.4.12"
fbchat = {git = "https://github.com/brleinad/fbchat.git", rev = "v1"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
